--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@fontsource/inter": "^5.2.8",
+        "alpinejs": "^3.15.3",
+        "chart.js": "^4.5.1",
+        "material-symbols": "^0.40.2"
     }
 }
