--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fontsource/material-icons-round": "^5.2.6",
         "alpinejs": "^3.15.3",
         "chart.js": "^4.5.1",
+        "chartjs-plugin-annotation": "^3.1.0",
         "jquery": "^4.0.0",
         "material-symbols": "^0.40.2",
         "select2": "^4.1.0-rc.0",
